# astra

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASENOTES.md
.github/workflows/: release-and-update.yml
docs/: config.md
src/: cli.rs  config.rs  constants.rs  main.rs  updater.rs
src/config/: config.rs  frequency.rs  mod.rs  theme.rs  user_config.rs
src/config/generators/: julia.rs  mod.rs  solid.rs  spotlight.rs
src/configuration/: config.rs  frequency.rs  mod.rs  theme.rs  user_config.rs
src/configuration/generators/: julia.rs  mod.rs  nasa_apod.rs  solid.rs  spotlight.rs
src/os_implementations/: linux.rs  macos.rs  mod.rs  windows.rs
src/os_implementations/linux/: errors.rs  mod.rs  systemd.rs
src/os_implementations/linux/systemd/: mod.rs  service.rs  timers.rs
src/os_implementations/linux/utils/: mod.rs
src/os_implementations/macos/: errors.rs  launchctl.rs  mod.rs
src/os_implementations/macos/launchctl/: commands.rs  mod.rs  plist.rs
src/os_implementations/macos/utils/: mod.rs
src/os_implementations/windows/: errors.rs  mod.rs
src/os_implementations/windows/task_scheduler/: mod.rs
src/os_implementations/windows/utils/: mod.rs
src/themes/: color_theme.rs  default_themes.rs  mod.rs  theme_selector.rs
src/wallpaper_generators/: bing_spotlight.rs  color_themes.rs  fractals.rs  julia.rs  mod.rs  nasa_apod.rs  solid_color.rs  utils.rs
