[package]
name = "astra"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/CharlieKarafotias/astra"
authors = ["Charlie Karafotias <cnkara2023@gmail.com>"]
description = "A tool for generating wallpaper images"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
image = { version = "0.25.6", features = ["png", "rayon"] }
num-complex = { version = "0.4.6", features = ["std"] }
phf = { version = "0.12.1", features = ["macros"] }
rand = "0.9.1"
rayon = "1.10.0"
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32", "Win32_System", "Win32_System_Registry", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }
